# rust-exasol

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  log.txt
src/: arguments.rs  column.rs  command.rs  con_opts.rs  connection.rs  constants.rs  database.rs  error.rs  http_transport.rs  lib.rs  macros.rs  migrate.rs  params.rs  prepared.rs  query.rs  query_result.rs  response.rs  row.rs  statement.rs  stream.rs  testing.rs  tls.rs  transaction.rs  type_info.rs  value.rs  websocket.rs
src/con_opts/: address.rs  builder.rs  credentials.rs  login.rs  mod.rs  protocol_version.rs  serializable.rs
src/connection/: compress.rs  driver_attr.rs  exa_ws.rs  executor.rs  macros.rs  mod.rs  response.rs  result.rs  row.rs  stream.rs  tls.rs  tls_cert.rs  tls_connector.rs  websocket.rs
src/connection/etl/: error.rs  mod.rs  non_tls.rs
src/connection/etl/export/: buf_reader.rs  mod.rs  options.rs  reader.rs
src/connection/etl/import/: mod.rs  options.rs  writer.rs
src/connection/etl/tls/: mod.rs  native_tls.rs  rustls.rs  sync_socket.rs
src/connection/etl/traits/: job.rs  mod.rs  worker.rs
src/connection/http_transport/: config.rs  mod.rs  reader.rs  stream.rs  writer.rs
src/connection/http_transport/export/: buf_reader.rs  mod.rs  options.rs  reader.rs
src/connection/http_transport/import/: mod.rs  options.rs  writer.rs
src/connection/http_transport/worker/: mod.rs  reader.rs  writer.rs
src/connection/websocket/: compressed.rs  mod.rs  socket.rs  tls.rs  uncompressed.rs
src/connection/websocket/extend/: compressed.rs  mod.rs  uncompressed.rs
src/connection/ws/: compress.rs  mod.rs
src/http_transport/: config.rs  mod.rs  stream.rs  writer.rs
src/options/: builder.rs  error.rs  login.rs  mod.rs  protocol_version.rs  serializable.rs  ssl_mode.rs
src/responses/: attributes.rs  columns.rs  describe.rs  error.rs  fetch.rs  fetched.rs  hosts.rs  login_info.rs  mod.rs  prepared_stmt.rs  pub_key.rs  public_key.rs  result.rs  session_info.rs
src/types/: array.rs  bool.rs  chrono.rs  float.rs  int.rs  iter.rs  mod.rs  option.rs  rust_decimal.rs  str.rs  uint.rs  uuid.rs
tests/: basic.rs  encrypted_compression.rs  rustls_test_panic.rs  simple_compression.rs
tests/it/: common.rs  describe.rs  error.rs  main.rs  migrate.rs  prepared.rs  queries.rs  test-attr.rs  types.rs
tests/it/etl/: mod.rs
tests/it/fixtures/: comments.sql  posts.sql  users.sql
tests/it/http_transport/: mod.rs
tests/it/migrations/: 1_user.sql  2_post.sql  3_comment.sql
tests/it/migrations_reversible/: 1_add_table.down.sql  1_add_table.up.sql  2_modify_column.down.sql  2_modify_column.up.sql
tests/it/migrations_simple/: 1_add_test_table.sql  2_convert_type.sql
tests/it/params/: float.rs  int.rs  mod.rs  uint.rs
tests/it/setup/: 1_setup.sql
tests/it/types/: bool.rs  chrono.rs  float.rs  geometry.rs  int.rs  invalid.rs  mod.rs  rust_decimal.rs  str.rs  uint.rs  uuid.rs
