[package]
name = "exasol"
version = "0.3.2"
edition = "2021"
authors = ["bobozaur"]
description = "Exasol client library implemented in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bobozaur/rust-exasol"
keywords = ["database", "sql", "exasol", "rust"]
exclude = ["tests/*"]
categories = ["database"]

[dependencies]
log = "0.4.16"
base64 = "0.20.0-alpha.1"
rand = "0.8.5"
url = "2.2.2"
tungstenite = "0.17.2"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
regex = "1.5.5"
lazy-regex = "2.3.0"
thiserror = "1.0.30"
csv = "1.1.6"
crossbeam = "0.8.1"
rsa = "0.6.1"
sha2 = "0.10.2"
rcgen = { version = "0.9.2", features = ["pem"], optional = true }
__native_tls = { version = "0.2.10", optional = true, package = "native-tls"}
__rustls = {version = "0.20.4", optional = true , package = "rustls"}
flate2 = { version = "1.0.22", optional = true }

[features]
native-tls-basic = ["rcgen", "__native_tls", "tungstenite/native-tls"] # meant for internal use
rustls = ["rcgen", "__rustls", "tungstenite/__rustls-tls"] # meant for internal use
native-tls = ["tungstenite/native-tls", "native-tls-basic"]
native-tls-vendored = ["tungstenite/native-tls-vendored", "native-tls-basic"]
rustls-tls-webpki-roots = ["tungstenite/rustls-tls-webpki-roots", "rustls"]
rustls-tls-native-roots = ["tungstenite/rustls-tls-native-roots", "rustls"]