[package]
name = "exasol"
version = "0.7.1"
edition = "2021"
authors = ["bobozaur"]
description = "Exasol driver for the SQLx framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bobozaur/rust-exasol"
keywords = ["database", "sql", "exasol", "sqlx", "driver"]
exclude = ["tests/*"]
categories = ["database"]

[dependencies]
rand = "0.8.5"
base64 = "0.21.2"
thiserror = "1.0.30"
url = "2.2.2"
rsa = "0.9.2"
async-tungstenite = "0.22.2"
futures-io = "0.3.28"
futures-util = "0.3.28"
futures-core = "0.3.28"
serde_json = "1.0.100"
serde = { version = "1.0.169", features = ["derive"] }
either = "1.8.1"
pin-project = "1.1.2"
lru = "0.11.0"
sqlx-core = "=0.7.1"
sqlx-macros-core = "=0.7.1"
tracing = { version = "0.1.37", features = ["log"] }

# Feature flagged optional dependencies
flate2 = { version = "1.0.22", optional = true }
uuid = { version = "1.4.1", features = ["serde"], optional = true }
chrono = { version = "0.4.26", features = ["serde"], optional = true }
rust_decimal = { version = "1.30.0", optional = true }
dotenvy = { version = "0.15.7", optional = true }
hex = { version = "0.4.3", optional = true }

[features]
flate2 = ["dep:flate2"]
uuid = ["dep:uuid"]
migrate = ["sqlx-core/migrate", "dep:dotenvy", "dep:hex"]
